--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
